--- a/test/index.html
+++ b/test/index.html
@@ -14,9 +14,9 @@
 <body>
     <section class="vh-100">
         <div class="container h-100">
-            <div hidden="true" class="alert alert-danger" id="alert-fail" role="alert">
+            <div hidden="true" class="alert alert-danger" id="matchmakingAlertFail" role="alert">
             </div>
-            <div hidden="true" class="alert alert-success" id="alert-success" role="alert">
+            <div hidden="true" class="alert alert-success" id="matchmakingAlertSuccess" role="alert">
             </div>
             <div id="initialScreen" class="h-100">
 
@@ -41,7 +41,7 @@
                         Join Game
                     </button>
                     <div>OR</div>
-                    <div id="time">00:00</div>
+                    <div id="matchmakingTime">00:00</div>
                     <button
                             type="submit"
                             class="btn btn-success"
