--- a/test/index.html
+++ b/test/index.html
@@ -65,6 +65,17 @@
                     >
                         Cancel
                     </button>
+                    <div>OR Spectate</div>
+                    <div class="form-group">
+                        <input type="text" placeholder="Enter Game Code" id="spectateCodeInput"/>
+                    </div>
+                    <button
+                            type="submit"
+                            class="btn btn-success"
+                            id="spectateGameButton"
+                    >
+                        Spectate Game
+                    </button>
                 </div>
             </div>
 
