--- a/test/index.html
+++ b/test/index.html
@@ -76,6 +76,13 @@
                     >
                         Spectate Game
                     </button>
+                    <div>OR invite to dual</div>
+                    <button type="submit" value="A" class="btn btn-success" id="inviteA">Invite A</button>
+                    <button type="submit" value="B" class="btn btn-success" id="inviteB">Invite B</button>
+                    <button type="submit" value="C" class="btn btn-success" id="inviteC">Invite C</button>
+                    <button type="submit" value="A" class="btn btn-success" id="acceptA" hidden="true">Accept A</button>
+                    <button type="submit" value="B" class="btn btn-success" id="acceptB" hidden="true">Accept B</button>
+                    <button type="submit" value="C" class="btn btn-success" id="acceptC" hidden="true">Accept C</button>
                 </div>
             </div>
 
